--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,6 +3,7 @@
     {{ form_row(form.plainPassword.first) }}
     {{ form_row(form.plainPassword.second) }}
     {{ form_row(form.firstName) }}
+    {{ form_row(form.lastName) }}
 
 <button type="submit">Register!</button>
 {{ form_end(form) }}
