--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,9 +1,13 @@
 {{ form_start(form) }}
-    {{ form_row(form.email) }}
+   {#
+   {{ form_row(form.email) }}
     {{ form_row(form.plainPassword.first) }}
     {{ form_row(form.plainPassword.second) }}
     {{ form_row(form.firstName) }}
     {{ form_row(form.lastName) }}
 
 <button type="submit">Register!</button>
+#}
+
+{{ form_widget(form) }}
 {{ form_end(form) }}
