--- a/templates/registration/auth.html.twig
+++ b/templates/registration/auth.html.twig
@@ -4,6 +4,9 @@
     {% block stylesheets %}
         <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Open+Sans:600'>
         <link rel="stylesheet" href="/login/css/style.css">
+
+        <script type="text/javascript" src="/login/js/jquery-3.3.1.js"></script>
+        <script type="text/javascript" src="/login/js/scripts.js"></script>
     {% endblock %}
 </head>
 <body>
@@ -14,8 +17,10 @@
             <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
             <div class="login-form">
                 <div class="sign-in-htm">
-                    {{ form_start(lform, {'action':path('signin_user')}) }}
-
+                    {{ form_start(lform, {'attr':{ 'action':path('signin_user'),'id':'user_signin'}}) }}
+                    <div class="group">
+                        <label id="error_text"></label>
+                    </div>
                     <div class="group">
                         {{ form_label(lform.email," ") }}
                         {{ form_widget(lform.email, {'attr':{'class':'input', 'placeholder':'Email'}}) }}
@@ -25,7 +30,7 @@
                         {{ form_widget(lform.password, {'attr':{'class':'input', 'placeholder':'Password'}}) }}
                     </div>
                     <div class="group">
-                        <input id="check" type="checkbox" class="check" checked>
+                        <input id="check" type="checkbox" class="check" name="_remember_me" checked>
                         <label for="check"><span class="icon"></span> Keep me Signed in</label>
                     </div>
                     <div class="group">
@@ -40,7 +45,10 @@
                         {{ form_end(lform) }}
                 </div>
                 <div class="sign-up-htm">
-                        {{ form_start(lform, {'action':path('signup_user')}) }}
+                        {{ form_start(lform, {'attr':{ 'action':path('signup_user'),'id':'user_signup'}}) }}
+                    <div class="group">
+                        <label id="error_text"></label>
+                    </div>
                     <div class="group">
                         {{ form_label(rform.email," ") }}
                         {{ form_widget(rform.email, {'attr':{'class':'input', 'placeholder':'Email'}}) }}
