--- a/templates/registration/auth.html.twig
+++ b/templates/registration/auth.html.twig
@@ -19,7 +19,7 @@
                 <div class="sign-in-htm">
                     {{ form_start(lform, {'attr':{ 'action':path('signin_user'),'id':'user_signin'}}) }}
                     <div class="group">
-                        <label id="error_text"></label>
+                        <label id="error_signin_text"></label>
                     </div>
                     <div class="group">
                         {{ form_label(lform.email," ") }}
@@ -47,7 +47,7 @@
                 <div class="sign-up-htm">
                         {{ form_start(lform, {'attr':{ 'action':path('signup_user'),'id':'user_signup'}}) }}
                     <div class="group">
-                        <label id="error_text"></label>
+                        <label id="error_signup_text"></label>
                     </div>
                     <div class="group">
                         {{ form_label(rform.email," ") }}
