--- a/public/login/css/style.css
+++ b/public/login/css/style.css
@@ -27,7 +27,8 @@ a{color:inherit;text-decoration:none}
     background:rgba(40,57,101,.9);
 }
 .login-html .sign-in-htm,
-.login-html .sign-up-htm{
+.login-html .sign-up-htm,
+.login-html .forget-htm{
     top:0;
     left:0;
     right:0;
@@ -42,6 +43,7 @@ a{color:inherit;text-decoration:none}
 }
 .login-html .sign-in,
 .login-html .sign-up,
+.login-html .forget,
 .login-form .group .check{
     display:none;
 }
@@ -58,6 +60,7 @@ a{color:inherit;text-decoration:none}
     border-bottom:2px solid transparent;
 }
 .login-html .sign-in:checked + .tab,
+.login-html .forget:checked + .tab,
 .login-html .sign-up:checked + .tab{
     color:#fff;
     border-color:#1161ee;
@@ -143,6 +146,11 @@ a{color:inherit;text-decoration:none}
     -webkit-transform:scale(1) rotate(-45deg);
     transform:scale(1) rotate(-45deg);
 }
+.login-html .forget:checked + .tab + .forget + .tab + .login-form .forget-htm{
+    -webkit-transform:rotate(0);
+    transform:rotate(0);
+}
+
 .login-html .sign-in:checked + .tab + .sign-up + .tab + .login-form .sign-in-htm{
     -webkit-transform:rotate(0);
     transform:rotate(0);
