--- a/templates/registration/auth.html.twig
+++ b/templates/registration/auth.html.twig
@@ -13,9 +13,16 @@
 {% block body %}
     <div class="login-wrap">
         <div class="login-html">
+            <input id="tab-3" type="radio" name="tab" class="forget" hidden><label for="tab-3" class="tab"></label>
             <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
             <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
             <div class="login-form">
+                <div class="forget-htm">
+                    <div class="group">
+                        <label>1111</label>
+                        <input type = 'text'>
+                    </div>
+                </div>
                 <div class="sign-in-htm">
                     {{ form_start(lform, {'attr':{ 'action':path('signin_user'),'id':'user_signin'}}) }}
                     <div class="group">
@@ -39,7 +46,7 @@
                     </div>
                     <div class="hr"></div>
                     <div class="foot-lnk">
-                        <a href="#forgot">Forgot Password?</a>
+                        <label for="tab-3">Forgot Password?</label>
                     </div>
                         <input type="hidden" name="_target_path" value="/admin" />
                         {{ form_end(lform) }}
