--- a/templates/registration/auth.html.twig
+++ b/templates/registration/auth.html.twig
@@ -26,7 +26,7 @@
                         <input type="submit" class="button" value="Sign Out">
                     </div>
                     <div class="hr"></div>
-                </div
+                </div>
                 <div class="sign-in-htm">
                     {{ form_start(lform, {'attr':{ 'action':path('signin_user'),'id':'user_signin'}}) }}
                     <div class="group">
