--- a/templates/registration/auth.html.twig
+++ b/templates/registration/auth.html.twig
@@ -15,7 +15,7 @@
         <div class="login-html">
             <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
             <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
-            <input id="tab-3" type="radio" name="tab" class="sign-out"><label for="tab-3" class="tab">Sign Out</label>
+            <input id="tab-3" type="radio" name="tab" class="sign-out"><label for="tab-3" class="tab"></label>
             <div class="login-form">
                 <div class="sign-out-htm">
                     <div class="group">
