--- a/templates/registration/auth.html.twig
+++ b/templates/registration/auth.html.twig
@@ -17,16 +17,23 @@
             <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
             <input id="tab-3" type="radio" name="tab" class="sign-out"><label for="tab-3" class="tab"></label>
             <div class="login-form">
+
                 <div class="sign-out-htm">
+                    {{ form_start(pform, {'attr':{ 'action':path('forget'),'id':'user_forget'}}) }}
                     <div class="group">
-                        <label for="user" class="label">Username</label>
-                        <input id="user" type="text" class="input">
+                        <label id="error_forget_text"></label>
                     </div>
                     <div class="group">
-                        <input type="submit" class="button" value="Sign Out">
+                        {{ form_label(pform.email," ") }}
+                        {{ form_widget(pform.email, {'attr':{'class':'input', 'placeholder':'Email'}}) }}
                     </div>
+                    <div class="group">
+                        {{ form_widget(pform.submit, {'attr':{'class':'button'}}) }}
+                    </div>
+                    {{ form_end(pform) }}
                     <div class="hr"></div>
                 </div>
+
                 <div class="sign-in-htm">
                     {{ form_start(lform, {'attr':{ 'action':path('signin_user'),'id':'user_signin'}}) }}
                     <div class="group">
