--- a/templates/temp.html.twig
+++ b/templates/temp.html.twig
@@ -1,11 +1,44 @@
 <html>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="/login/js/jquery.ajaxgrid.js"></script>
-<body>
-<div id='entities-grid'>
-</div>
+<head>
+    <title>Admin page</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-bootgrid/1.3.1/jquery.bootgrid.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-bootgrid/1.3.1/jquery.bootgrid.js"></script>
 
-<div id='en'>
-</div>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="/login/js/jquery.agrid.js"></script>
+
+    <style>
+        body
+        {
+            margin:0;
+            padding:0;
+            background-color:#f1f1f1;
+        }
+        .box
+        {
+            width:1270px;
+            padding:20px;
+            background-color:#fff;
+            border:1px solid #ccc;
+            border-radius:5px;
+            margin-top:25px;
+        }
+        .btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
+            padding-bottom: 12px;
+        }
+        .table > thead > tr > th {
+            width: 50px;
+        }
+    </style>
+
+</head>
+<body>
+    <div id='entities-grid'></div>
 </body>
+
 </html>
+
