--- a/templates/agtemp.html.twig
+++ b/templates/agtemp.html.twig
@@ -1,11 +1,11 @@
 <html>
     <head>
         <script type="text/javascript" src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
-        <script type="text/javascript" src="/login/js/jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
         {#<script type="text/javascript" src="/login/js/bootstrap.min.js"></script>#}
         <script type ="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="/login/js/jquery.ajaxgrid.js"></script>
-        <link rel="stylesheet" type="text/css" href="/login/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     </head>
     <body>
     <button id="users">USERS</button>
@@ -17,6 +17,16 @@
 </html>
 
 <script>
+
+    $(document).ready(function () {
+        $("#entities-grid").ajaxgrid({
+            'url':'http://quiz.dev/ajax/users',
+            'table': 'user',
+            'showFields':['id','email','firstName','lastName','roles','active'],
+            'filterableFields':['email','firstName','lastName'],
+            'sortableFields':['id','email','firstName','lastName']
+        });
+    });
 
     $('#users').click(function () {
         $("#entities-grid").empty();
