--- a/templates/registration/auth.html.twig
+++ b/templates/registration/auth.html.twig
@@ -5,7 +5,7 @@
         <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Open+Sans:600'>
         <link rel="stylesheet" href="/login/css/style.css">
 
-        <script type="text/javascript" src="/login/js/jquery-3.3.1.js"></script>
+        <script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="/login/js/scripts.js"></script>
     {% endblock %}
 </head>
