--- a/templates/agtemp.html.twig
+++ b/templates/agtemp.html.twig
@@ -2,8 +2,8 @@
     <head>
         <script type="text/javascript" src="https://unpkg.com/popper.js/dist/umd/popper.min.js"></script>
         <script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
-        {#<script type="text/javascript" src="/login/js/bootstrap.min.js"></script>#}
-        <script type ="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/login/js/bootstrap.min.js"></script>
+        {#<script type ="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>#}
         <script type="text/javascript" src="/login/js/jquery.ajaxgrid.js"></script>
         <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     </head>
