--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Admin page</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/js/jquery-3.3.1.min.js"></script>
     <script type ="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/login/js/jquery.ajaxgrid.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
