--- a/templates/mainpage/main.html.twig
+++ b/templates/mainpage/main.html.twig
@@ -3,9 +3,11 @@
     <title>Quiz</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/mainpage/css/style.css">
+    <script src="/js/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/login/js/jquery.ajaxgrid.js"></script>
 </head>
 <body style="background-color:#626992;">
 <header>
@@ -13,32 +15,32 @@
         <div id="menu-container" class="centered">
             <ul>
                 <li id="home_active" class="">
-                    <a href="#">Главная</a>
+                    <a href="#">Main</a>
                 </li>
                 <li id="lectures" class="active">
-                    <a href="#">Викторины</a>
+                    <a href="#">My quiz</a>
                 </li>
             </ul>
             <div class="right">
                 <ul>
                     <li>
-                        <a href="#">Выйти</a>
+                        <a href="#">Logout</a>
                     </li>
                 </ul>
             </div>
         </div>
 </header>
 <div class="ContentLayout">
-    <p class="for_p">Не до конца пройденные виктрины</p>
+    <p class="for_p">Not finished</p>
     <div class="searchBlock">
-        <table class="table table-inverse style_table" id="tbl" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info">
+        <table class="table table-inverse style_table" id="recenttbl" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info">
             <thead>
             <th id="header" class="notselected">Name</th>
             <th>Time</th>
             <th>MadeAnser</th>
             <th style="width: 80px;">Play</th>
             </thead>
-            <tbody id="table-data">
+            <tbody>
             <tr>
                 <td>Мыло на мыло</td>
                 <td>4:11</td>
@@ -52,109 +54,21 @@
     </div>
 </div>
 <div class="mainContentLayout">
-    <h1 style="color: #fff;">Список викторин</h1>
+    <h1 style="color: #fff;">Quiz list</h1>
     <br>
-    <div class="searchBlock">
-        <div>
-            <table class="searchBlock__table">
-                <tbody>
-                <tr>
-                    <td class="countContainer">
-                        <div>1</div>
-                    </td>
-                    <td class="quiz">Викторина</td>
-                    <td>
-                        <input class="searchBlock__input text-box single-line" id="search" name="search" type="text">
-                    </td>
-                    <td class="search" style="vertical-align:middle; width:1px;padding-left:9px;">
-                        <div class="searchBlock__searchButton searchButton"></div>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        <br>
-        <table class="table table-inverse style_table" id="tbl" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info">
-            <thead>
-            <th id="header" class="notselected">Name</th>
-            <th style="width: 80px;">Play</th>
-            </thead>
-            <tbody id="table-data">
-            <tr>
-                <td>Мыло на мыло</td>
-                <td >
-                    <button id="edit" class="btn btn-warning edit">Play</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Рама на мыло</td>
-                <td>
-                    <button id="edit" class="btn btn-warning edit">Play</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Раки на горе</td>
-                <td>
-                    <button id="edit" class="btn btn-warning edit">Play</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Жуки на воде</td>
-                <td>
-                    <button id="edit" class="btn btn-warning edit">Play</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Мыши на суше</td>
-                <td>
-                    <button id="edit" class="btn btn-warning edit">Play</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Жабы на небе</td>
-                <td>
-                    <button id="edit" class="btn btn-warning edit">Play</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Головой по голове</td>
-                <td>
-                    <button id="edit" class="btn btn-warning edit">Play</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Всё о голове</td>
-                <td>
-                    <button id="edit" class="btn btn-warning edit">Play</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Всё о Кличко</td>
-                <td>
-                    <button id="edit" class="btn btn-warning edit">Play</button>
-                </td>
-            </tr>
-            <tr>
-                <td>Твоя судьба</td>
-                <td>
-                    <button id="edit" class="btn btn-warning edit">Play</button>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        <div id="pages" class="pages" style="margin-top: -5px; margin-left: 10px;">
-            <p id="all" style="font-size: 12pt; color: #fff; text-decoration: underline; text-decoration: none;">Showing 1 to 1 of 1 entries</p>
-        </div>
-        <div class="dataTables_paginate paging_simple_numbers" style="float: right; margin-top: -36px;">
-            <ul class="pagination">
-                <li class="paginate_button page-item previous disabled_one" id="dataTable_previous"><a href="#" aria-controls="dataTable" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li>
-                <li class="paginate_button page-item active_one"><a href="#" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">1</a></li>
-                <li class="paginate_button page-item just"><a href="#" aria-controls="dataTable" data-dt-idx="2" tabindex="0" class="page-link">2</a></li>
-                <li class="paginate_button page-item next_one" id="dataTable_next"><a href="#" aria-controls="dataTable" data-dt-idx="3" tabindex="0" class="page-link">Next</a></li>
-            </ul>
-        </div>
+    <div class="searchBlock" id="entities-grid">
     </div>
 </div>
 
 </body>
 </html>
+
+<script>
+    $('div#entities-grid').ajaxgrid({
+        'url':'http://quiz.dev/ajax/quiz',
+        'table':'quiz',
+        'showFields':['name'],
+        'filterableFields':['name'],
+        'mode':0
+    })
+</script>
