--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -2,12 +2,17 @@
 <head>
     <title>Quiz</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="/mainpage/css/style.css">
+    {% block css %}
+        <link rel="stylesheet" type="text/css" href="/mainpage/css/style.css">
+    {% endblock %}
     <script src="/js/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/login/js/jquery.ajaxgrid.js"></script>
+
+
 </head>
 <body style="background-color:#626992;">
 <header>
