--- a/templates/auth.html.twig
+++ b/templates/auth.html.twig
@@ -5,7 +5,7 @@
         <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Open+Sans:600'>
         <link rel="stylesheet" href="/login/css/style.css">
 
-        <script type="text/javascript" src="/login/js/jquery-3.3.1.js"></script>
+        <script type="text/javascript" src="/login/js/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="/login/js/scripts.js"></script>
     {% endblock %}
 </head>
@@ -15,18 +15,25 @@
         <div class="login-html">
             <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
             <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
-            <input id="tab-3" type="radio" name="tab" class="sign-out"><label for="tab-3" class="tab">Sign Out</label>
+            <input id="tab-3" type="radio" name="tab" class="sign-out"><label for="tab-3" class="tab"></label>
             <div class="login-form">
+
                 <div class="sign-out-htm">
+                    {{ form_start(pform, {'attr':{ 'action':path('forget'),'id':'user_forget'}}) }}
                     <div class="group">
-                        <label for="user" class="label">Username</label>
-                        <input id="user" type="text" class="input">
+                        <label id="error_forget_text"></label>
                     </div>
                     <div class="group">
-                        <input type="submit" class="button" value="Sign Out">
+                        {{ form_label(pform.email," ") }}
+                        {{ form_widget(pform.email, {'attr':{'class':'input', 'placeholder':'Email'}}) }}
                     </div>
+                    <div class="group">
+                        {{ form_widget(pform.submit, {'attr':{'class':'button'}}) }}
+                    </div>
+                    {{ form_end(pform) }}
                     <div class="hr"></div>
                 </div>
+
                 <div class="sign-in-htm">
                     {{ form_start(lform, {'attr':{ 'action':path('signin_user'),'id':'user_signin'}}) }}
                     <div class="group">
