--- a/templates/emails/registration.html.twig
+++ b/templates/emails/registration.html.twig
@@ -1,9 +1,9 @@
 {# templates/emails/registration.html.twig #}
 <h3>You did it! You registered!</h3>
 
-Hi Vasya! You're successfully registered.
+Hi {{ name }}! You're successfully registered.
 
 {# example, assuming you have a route named "login" #}
-To login, go to: <a href="http://quiz.dev/index.php/home">url</a>.
+To login, go to: <a href="http://quiz.dev/finishreg?hash={{ hash }}">url</a>.
 
 Thanks!
