--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -13,9 +13,14 @@
 {% endblock %}
 
 {% block exit %}
-    <li>
-        <a href="{{ path('main') }}">To site</a>
-    </li>
+    <div class="right">
+        <ul>
+            <li>
+                <a href="{{ path('main') }}">To site</a>
+            </li>
+        </ul>
+    </div>
+
 {% endblock %}
 
 {% block pagecontent %}
