--- a/public/mainpage/css/style.css
+++ b/public/mainpage/css/style.css
@@ -93,6 +93,15 @@ ul {
  	font-size: 16px;
  	color: #fff;
 }
+
+#menu-container .rightone a{
+    margin-top: -120px;
+    margin-left: 750px;
+    float: right;
+    font-size: 16px;
+    color: #fff;
+}
+
 .quiz{
 	color:white;
 	vertical-align:middle;
