--- a/templates/homepage/home.html.twig
+++ b/templates/homepage/home.html.twig
@@ -10,41 +10,30 @@
     <div class="fixed-top"></div>
     <div class="logo"><img src="/home-page/img/logo.png"></div>
     <div class="top-menu">
-        <ul>
-            <li><a href="#">RU</a></li>
-            <li><a href="#">Войти</a></li>
-        </ul>
     </div>
 </header>
 <div class="content">
     <div class="left">
-        <h1>Начните викторину прямо сейчас!</h1>
+        <h1>Start right now!</h1>
         <div class="button">
-            <a href="#">Начать</a>
+            <a href="{{ path('authorize') }}">Login/Register</a>
         </div>
     </div>
     <div class="table">
+        <h1>Top users</h1>
         <table>
             <tr>
                 <th>Name</th>
                 <th>Surname</th>
-                <th>Rating</th>
+                <th>Points</th>
             </tr>
-            <tr>
-                <td>Pavel</td>
-                <td>Budai</td>
-                <td>10</td>
-            </tr>
-            <tr>
-                <td>Blad</td>
-                <td>Glovazkiy</td>
-                <td>9</td>
-            </tr>
-            <tr>
-                <td>Pavel</td>
-                <td>Budai</td>
-                <td>10</td>
-            </tr>
+            {% for user in users %}
+                <tr>
+                    <td>{{ user.Firstname }}</td>
+                    <td>{{ user.Surname }}</td>
+                    <td>{{ user.Answers }}</td>
+                </tr>
+            {% endfor %}
         </table>
 
     </div>
