--- a/templates/mainpage/beginQuiz.html.twig
+++ b/templates/mainpage/beginQuiz.html.twig
@@ -27,8 +27,7 @@
     </div>
     <div class="gameActions">
     <div class="gameActions__StartGameCol">
-        <button class="btn btn-success" id="start">Start</button>
-    {#<a class="font-size batton batton-primary" style="font-size:16px;" id="getquestion" value="{{ quiz.id }}">Start</a>#}
+    <a class="font-size batton batton-primary" style="font-size:16px;" id="getquestion" value="{{ quiz.id }}">Start</a>
     </div>
     <div class="gameActions__StopGameCol">
     <a class="batton batton-default" style="border-color: #adadad;font-size:16px;" id="back">Back</a>
