--- a/templates/mainpage/beginQuiz.html.twig
+++ b/templates/mainpage/beginQuiz.html.twig
@@ -118,7 +118,7 @@ function getTable() {
         {#<h3 class="msrgOne_h3">1/10</h3>#}
     '</div>' +
     '<div class="gameActions__StopGameCol">'+
-        '<a class="batton batton-primary" style="font-size:16px;" id="next">Next</a>' +
+        '<a class="batton batton-primaryOne" style="font-size:16px;" id="next">Next</a>' +
     '</div>' +
     '</div>');
 
