Рефакторинг кода. Реализация механизма вывода изображения в интрефейс прохождения викторины.

--- a/public/play_quiz/css/style.css
+++ b/public/play_quiz/css/style.css
@@ -379,6 +379,7 @@ pa
 .gameActions__StopGameCol{
     display: flex;
     flex-grow: 3;
+    margin-left: -80px;
 }
 .batton {
     display: inline-block;
